<?xml version="1.0"?>
<package format="3">
    <name>kodo_ekf_slam</name>
    <version>0.1.0</version>
    <description>EKF SLAM for ROS2</description>
    <maintainer email="kodorobotics@gmail.com">Kodo Robotics</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>